# mpv-compose

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/marcelsoftware/mpvcomposesample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/marcelsoftware/mpvcomposesample/: MainActivity.kt
app/src/main/java/dev/marcelsoftware/mpvcomposesample/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/dev/marcelsoftware/mpvcomposesample/: ExampleUnitTest.kt
buildscripts/: buildall.sh
buildscripts/include/: download-deps.sh  download-sdk.sh
buildscripts/scripts/: libplacebo.sh  mpv-android.sh  mpv.sh  shaderc.sh
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mpv-compose/: LICENSE  build.gradle.kts
mpv-compose/src/androidTest/java/dev/marcelsoftware/mpvcompose/: ExampleInstrumentedTest.kt
mpv-compose/src/main/cpp/: CMakeLists.txt  event.cpp  globals.h  jni_utils.cpp  jni_utils.h  main.cpp  mpv_client_api.h  property.cpp  render.cpp  thumbnail.cpp
mpv-compose/src/main/java/dev/marcelsoftware/mpvcompose/: DefaultLogObserver.kt  MPVLib.kt  MPVPlayer.kt
mpv-compose/src/main/java/dev/marcelsoftware/mpvcompose/dsl/: MPVDsl.kt  MPVObserveBuilder.kt  MPVObserverBuilder.kt
mpv-compose/src/test/java/dev/marcelsoftware/mpvcompose/: ExampleUnitTest.kt
